samples/_failures_safe/1761006536_d20a03_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f04d09c2.c: In function ‘main’:
./samples/SAFE/__tmp_f04d09c2.c:161:10: error: ‘EV’ undeclared (first use in this function)
  161 |         {EV
      |          ^~
./samples/SAFE/__tmp_f04d09c2.c:161:10: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_f04d09c2.c:162: error: expected ‘}’ at end of input
./samples/SAFE/__tmp_f04d09c2.c:161:9: note: to match this ‘{’
  161 |         {EV
      |         ^
./samples/SAFE/__tmp_f04d09c2.c:161:9: error: expected declaration or statement at end of input
